Changes in version 1.2.10
-------------------------

  * video display improvements and bug fixes; the screen is no longer
    blanked while the emulator is paused
  * the debugger window is hidden only after a short delay when it is
    closed, this fixes the flickering while using the step buttons
  * the editor buffer in the monitor has been increased from 120 to 160
    lines
  * memory dump is now also shown in ASCII format
  * in addition to the default hexadecimal format, it is also possible
    to specify numbers in the monitor in binary (e.g. %1010), octal
    (12o), and decimal (10l) format
  * new "step" buttons for stepping to the 16-bit address at the top of
    the stack ('Return') or any 16-bit address specified by the user
    ('Step to')
  * the debugger prints more detailed information about syntax and
    runtime errors in Lua scripts, and there is a new button to insert
    an empty breakpoint callback function
  * window icons have been implemented on non-Windows platforms if the
    emulator is built with FLTK 1.3.3 or newer
  * audio output fixes and improvements, WASAPI is now supported on
    Windows
  * screenshots and printer output are saved in PNG format instead of
    TGA
  * various improvements and new features in the compress utility
  * snapshot and demo files can be compressed in epcompress format
  * added support for building with FLTK 1.3.x and Lua 5.2/5.3, and for
    building 64-bit Windows binaries
  * OpenGL has been made an optional dependency at compile time
  * minor bug fixes

Changes in version 1.2.9.2
--------------------------

  * minor bug fixes

Changes in version 1.2.9.1
--------------------------

  * some improvements and optimizations in the p4fliconv and compress
    utilities
  * a few minor bugs have been fixed

Changes in version 1.2.9
------------------------

  * added a C interface that allows using the emulator as a shared
    library in other programs; the library and header file can be found